[package]
name          = "libxid"
version       = "0.1.2"
authors       = ["Jérôme Renard <jeromer@fastmail.net>"]
edition       = "2018"
license       = "MIT"
description   = "Package xid is a globally unique id generator library. It's a Rust port of https://github.com/rs/xid"
homepage      = "https://github.com/jeromer/libxid"
repository    = "https://github.com/jeromer/libxid"
documentation = "https://docs.rs/libxid/"
readme        = "README.md"

[dependencies]
rand          = "0.6"
gethostname   = "0.2.0"
md5           = "0.6.1"
crc32fast     = "1.1.2"
byteorder     = "1.3.1"
data-encoding = "2.1.2"
